css/main.css
/*********Code couleur**********/
/*gris foncé = #3F4847
blanc
noir
rose : #E33849*/

@font-face {
  font-family: "spotlight";
  src: url(../font/HoneyScript-Light.ttf);
}

@font-face {
  font-family: "spotlight";
  font-weight: bold;
  src: url(../font/HoneyScript-SemiBold.ttf);
}


/***********Mise en page générale*********************/

body {
  font-family: arial;
  letter-spacing: 1px;
  color: #3F4847;
}

body > div {
  background-color: #3F4847;
  display: flex;
  height: 100vh;
}

.logo {
  width: 160px;
  height: 200px;
  margin: auto;
  display: block;
  background: url("../img/logo4.png") no-repeat;
}

.logo:hover{
  background-image: url("../img/logo3.png");
}

h2 {
  color: #3F4847;
  font-weight: lighter;
  text-align: center;
  margin-bottom: 5px;
}

h2 span {
  color: #E33849;
  font-size: 2.5em;
  font-family: "spotlight";
  position: relative;
  top: 5px;
  font-weight: bold;
}

hr {
  color: #E33849;
  border: none;
  margin-top: 5px;
  margin-bottom: 50px;
  border-bottom: 3px solid #E33849;
  min-width: 140px;
  width: 20%;
}


/****************HEADER ******************************/

h1 {
  font-family: "spotlight";
  text-align: center;
  position: absolute;
  top: 300px;
  left: -4%;
  width: 100%;
  color: white;
  font-size: 6em;
  letter-spacing: 1px;
}

/****************Menu******************************/
.menu input {
  position: fixed;
  left: 50%;
}

.menu {
  position: fixed;
  z-index: 2;
}

#social ul {
  background-color: none;
  border-top: none;
}

#social>ul i  {
  margin-right: 10px;
  display: flex;
  align-items: center;
}

/*avant le clic*/
.burger-shower {
 display: none;
}

.burger-menu ul {
  display: none;
  flex-flow: row wrap;
  max-width: 100%;
  list-style-type: none;
}

.hamburger {
  display: flex;
  position: fixed;
  justify-content: center!important;
  margin: auto;
  bottom: 0;
  width: 100%;
  background-color: #3F4847;
}

.hamburger i {
  font-size: 2.5em;
  color: #E33849;
}

.burger-menu {
  height: 150px;
  position: absolute;
  bottom: 0;
  background-color:  #3F4847;
  font-size: 1.4em;
}

/*après le clic */

.burger-shower:checked ~ .burger-menu {
 height: 145px;
 width: 100%;
 padding: 0px;
 margin: 0px;
 text-align: center;
 color: white;
 transition: 1s;
 position: inherit;
}

.burger-shower:checked ~ .burger-menu>ul {
  display: flex;
  height: auto;
  align-items: stretch;
  padding-left: 0;
  position: inherit;
  margin-top: 0;
  justify-content: space-around;
  width: 100%;
}

.burger-menu ul:hover {
  border-top: 3px solid #E33849;
}

.burger-shower:checked ~ .hamburger {
  bottom : 150px;
  position: fixed;
  text-align: center;
  transition: 1s;
  background-color: transparent;
}

.burger-menu ul a {
  text-decoration: none;
  color: white;
  font-family: arial;
  margin-left: 0;
  width: 100%;
}

.burger-menu>ul li {
  display: flex;
  align-items: center;
  line-height: 35px;
  min-width: 48%;
}

.burger-menu ul ul{
  display: flex;
  flex-flow: row nowrap;
}


/****************Accueil******************************/

/****************Présentation*************************/

/****************Réalisation**************************/

/*CAROUSEL */
.realisation .carousel {
  /*justify-content: center;*/
  /*align-items: center;*/
  margin: auto;
  padding: 0;
  display: flex;

  /*max-height: 500px;*/
  /*width: 100%;*/
  max-width: 500px;
  overflow: hidden;
  /*border-bottom: 3px solid #3F4847;*/
  /*border-top: 3px solid #3F4847;*/
  position: relative;
}

.realisation img {
  margin: auto;
  min-width: 100%;
  height: 100%;
}

.carousel .carouselslide {
  left: 0px;
	position: relative;
	min-width: 100%;
  max-height: 500px;
	margin: 0;
  padding: 0;
	/*padding: 0;*/
	display: flex;
  justify-content: space-between;

	/*CSS3 keyframes animation*/
	animation-name: AutoSlide;
	animation-duration: 36s;
	animation-iteration-count: infinite;
	animation-timing-function: ease-in-out;
}

@keyframes AutoSlide {
100%, 0%, 5% {left: 0px; /*1ère image*/}
11.11%, 16% {left: -100%; /*2ème image*/}
22.22%, 27% {left: -200%; /*3ème image*/}
33.33%, 38% {left: -300%; /*4ème image*/}
44.44%, 49% {left: -400%; /*5ème image*/}
55.55%, 60% {left: -500%; /*6ème image*/}
66.66%, 71% {left: -600%; /*7ème image*/}
77.77%, 82% {left: -700%; /*8ème image*/}
88.88%, 98% {left: -800%; /*9ème image*/}
}


/****************Prestations**************************/
.prestation div {
  margin: auto;
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-around;
  /*position: relative;*/
}

.packages {
  color: gray;
  width: 80%;
  height: 480px;
  margin: auto;
  margin-bottom: 30px;
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  position: relative;
  padding: 24px;
  /*z-index: 1;*/
  font-family: arial;
/*  display: flex;
  flex-flow: row wrap;*/
}

.packages span {
  display: inline-block;
  position: relative;
  height: 24px;
  padding: 0 15px;
  border-radius: 4px;
  border: 1px solid #e5e5e5;
  background-color: #E33849;
  color: black;
  font-size: 10px;
  line-height: 24px;
  z-index: 1;
}

/*.packages div::before {
  display: block;
  position: absolute;
  top: 38%;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #e5e5e5;
  content: '';
  z-index: 1;
}*/

.packages:hover {
  transform: scale(1.05);
  transition: 0.5s;
  box-shadow: 0 0 90px 0 rgba(0,0,0,0.23);
  transition: 0.4s;
}

.packages h3 {
  color: #3F4847;
  font-size: 24px;
  font-weight: 300px;
}

.packages ul li::before {
  content: '–';
}

.packages ul {
  list-style-type: none;
  /*padding-bottom: 20px;*/
  line-height: 1.8;
  border-bottom: 1px solid #e5e5e5;
  width: 90%;
  /*padding-left: 10px;*/
  padding: 0 0 20px 10px;
  /*margin-left: -24px;*/
}

.packages button {
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  background-color: #E33849;
  color: #3F4847;
  font-weight: bold;
  height: 48px;
  width: 50%;
  /*margin-left: 20%;*/
  margin: 10% 0 0 20%;
  /*display: flex;
  justify-content: center;*/
}

.packages button:hover {
  background-color: #C72C48;
}

.packages ul li em::before {
  content: none;
}

.packages p {
  padding-bottom: 20px;
  border-bottom: 1px solid #e5e5e5;
}

/****************Equipe*******************************/

.equipe div {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  justify-content: center;
}

.equipe figure {
  width: 250px;
  height: auto;
  text-align: center;
}

.equipe .equipedetail {
  height: 0px;
  border-right: 3px solid  #E33849;
  overflow: hidden;
  transition: 0.6s;
}

.equipe figure img {
  overflow: hidden;
  border: 3px solid gray;
  border-radius: 150px;
  width: 100%;
}

.equipe figcaption:first-child {
  font-weight: 600;
}

.equipe figure:hover .equipedetail {
  height: 70px;
  min-width: 100%;
  /*border-top : 3px solid #E33849;*/
}

.equipe span {
  font-family: 'spotlight';
  font-size: 3em;
  font-weight: lighter;
  color: #E33849;
  margin-right: 5px;
  letter-spacing: 0px;
  position: relative;
  top: 4px;
}


/****************Contact******************************/
.line{
  display: flex;
  /*flex-wrap: wrap;*/
  flex-direction: column;
  margin-left: 15%;
}

/*.line input{*/
  /*padding: 8px;*/
/*}*/

.formulaire input, .formulaire textarea{
  border-radius: 0;
  border: 2px solid grey;
  margin: 5px 0;
  width: 80%;
  border-radius: 4px;
  padding: 8px;
}

.formulaire textarea{
  height: 80px;
  padding: 8px;
}

.formulaire select {
  width: 40%;
  margin-left: 25px;
}

.formulaire input[name="bouton"] {
  width: 30%;
  /*margin-left: 85px;*/
  background-color: #E33849;
  border: 1px solid lightgrey;
  position: relative;
  left: 30%;
  font-weight: bold;
}

.formulaire ul {
  list-style-type: none;
  display: flex;
  flex-flow: row wrap;
  margin-left: 20%;
}

.formulaire ul li {
  width: 63%;
  padding: 8px;
}

.formulaire li i {
 color: #E33849;
 position: absolute;
 left: 20%;
 padding: 18px;
}


/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
$$$$$$$$$$$$$$$$$$ TABLET $$$$$$$$$$$$$$$$$$$$$$$$
$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/

@media (min-width: 600px) {


  h1 {
    left: -1%;
  }



  /****************Réalisation**************************/

  /*CAROUSEL */
  .realisation .carousel {
    /*justify-content: center;*/
    /*align-items: center;*/
    margin: auto;
    padding: 0;
    display: flex;
    /*max-height: 500px;*/
    /*width: 100%;*/
    min-width: 100%;
    overflow: hidden;
    position: relative;
  }

  .realisation img {
    margin: 0 0px;
    min-width: 33.33%;
    height: 100%;
  }

  .carousel .carouselslide {
    left: 0px;
  	position: relative;
  	min-width: 100%;
    max-height: 500px;
  	margin: 0;
    padding: 0;
  	display: flex;

  	/*CSS3 keyframes animation*/
  	animation-name: AutoSlide;
  	animation-duration: 18s;
  	animation-iteration-count: infinite;
  	animation-timing-function: ease-in-out;
  }

  @keyframes AutoSlide {
  100%, 0%, 15% {left: 0px; /*image 1, 2, 3*/}
  33.33%, 48% {left: -100%; /*image 4, 5, 6*/}
  66.66%, 81% {left: -200%; /*image 7, 8, 9*/}
  }


/********************Prestations*************/
.packages {
  width: 40%
}



/********************Contact****************/

.formulaire input, .formulaire textarea {
width: 100%;
}

.formulaire input[name="bouton"] {
left: 5%;
width: 100px;
}

.formulaire select {
width: 50%;
}

.formulaire {
display: flex;
}

.line {
/*display: inline-block;*/
width: 35%;
border-right: 4px solid #E33849;
padding-right: 13%;
}

.line input  {
width: 100%;
}

.formulaire ul {
display: inline-block;
width: 35%;
padding-left: 0;
/*margin-left: 15%;*/
margin: 65px auto auto 15%;
}

.formulaire li i {
left: 65%;
}


}




/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
$$$$$$$$$$$$$$$$$$ DESKTOP $$$$$$$$$$$$$$$$$$$$$$$$
$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/

@media (min-width: 900px) {

  h1 {
    left: -1%;
  }

  /********************Prestations*************/
.packages {
  width: 18%;
}

}

